--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,20 @@ dependencies:
   cloud_firestore: ^5.2.1
   firebase_core:
   firebase_auth:
-
+  flutter_bloc:
+  device_preview:
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
+  flutter_gen_runner:
+  build_runner:
 
 flutter:
+  assets:
+    - assets/
+flutter_gen:
+  output: lib/gen/
   uses-material-design: true
   # assets:
   #  - images/a_dot_burr.jpeg
