--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_bloc:
   device_preview:
   intl_phone_number_input: ^0.7.0+2
+  smooth_page_indicator:
 dev_dependencies:
   flutter_test:
     sdk: flutter
