--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth:
   flutter_bloc:
   device_preview:
+  provider:
   intl_phone_number_input: ^0.7.0+2
   smooth_page_indicator:
   font_awesome_flutter:
