--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_fonts: ^6.2.0
+  pdf: ^3.11.1
+  shared_preferences:
+  printing:
 dev_dependencies:
   flutter_test:
     sdk: flutter
